--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Log file
 *.log
 
+# Gimp Files
+*.xcf
+
 # BlueJ files
 *.ctxt
 
@@ -17,6 +20,7 @@
 *.zip
 *.tar.gz
 *.rar
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
